--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 .idea/dictionaries
 .idea/vcs.xml
 .idea/jsLibraryMappings.xml
+*.iml
+target/
 
 # Sensitive or high-churn files:
 .idea/dataSources.ids
