--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,14 @@
 	<groupId>cz.muni.fi.neural</groupId>
 	<artifactId>neuralProject</artifactId>
 	<version>1.0-SNAPSHOT</version>
+	<dependencies>
+		<dependency>
+			<groupId>net.sf.opencsv</groupId>
+			<artifactId>opencsv</artifactId>
+			<version>2.3</version>
+		</dependency>
+	</dependencies>
+
 
 	<build>
 		<plugins>
