add configuration file

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,14 @@
 targetValueColumn=1
+#in percent
 batchsize=20
+mlpArchitecture=2,3,5
+inputVectors=1,2
+outputVertor=3
 
 
 #debug properties
+initializationDebug=true
+weightsDebug=true
+neuronsOutputDebug=true
+
+
