add more debug outputs

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,6 +1,7 @@
 targetValueColumn=1
 #in percent
-batchsize=20
+
+batchSize=20
 mlpArchitecture=3
 inputVectors=1,2
 outputVertor=3
@@ -8,6 +9,8 @@ outputVertor=3
 
 #debug properties
 initializationDebug=true
+learningIterationsDebug=true
+learningOutputsDebug=true
 weightsDebug=true
 neuronsOutputDebug=true
 
