change training set structure

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -2,14 +2,16 @@ targetValueColumn=1
 #in percent
 
 batchSize=20
-mlpArchitecture=3
+mlpArchitecture=3,3
 inputVectors=1,2
-outputVertor=3
+outputVector=3
 
 
 #debug properties
 initializationDebug=true
 learningIterationsDebug=true
+neuronInputsDebug=false
+outputsOfLearningDebug=true
 learningOutputsDebug=true
 weightsDebug=true
 neuronsOutputDebug=true
