Refactor Split lib API and Implementation add Weight Object Add NeuronBias object Polish code

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -2,18 +2,18 @@ targetValueColumn=1
 #in percent
 
 batchSize=20
-mlpArchitecture=6
+mlpArchitecture=4
 inputVectors=1,2
 outputVector=3
 
 
 #debug properties
-initializationDebug=true
-learningIterationsDebug=true
+initializationDebug=false
+learningIterationsDebug=false
 neuronInputsDebug=false
-outputsOfLearningDebug=true
-learningOutputsDebug=true
-weightsDebug=true
-neuronsOutputDebug=true
+outputsOfLearningDebug=false
+learningOutputsDebug=false
+weightsDebug=false
+neuronsOutputDebug=false
 
 
