--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,15 +1,16 @@
-targetValueColumn=1
-#in percent
+dataSourceName =winequality-white.csv
+csvSeparator =;
 
 batchSize=20
-mlpArchitecture=4
-inputVectors=1,2
-outputVector=3
+mlpArchitecture=15,15
+inputVectors=1,2,3,4,5,6,7,8,9,10,11
+outputVector=12
 
 
 #debug properties
+loadedDatasetDebug=true
 initializationDebug=false
-learningIterationsDebug=false
+learningIterationsDebug=true
 neuronInputsDebug=false
 outputsOfLearningDebug=false
 learningOutputsDebug=false
