Refactor Change Arrays to Lists Add TrainingSample object

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -2,9 +2,9 @@ targetValueColumn=1
 #in percent
 
 batchSize=20
-mlpArchitecture=4
-inputVectors=1,2
-outputVector=3
+mlpArchitecture=4,2
+inputSize=2
+outputSize=1
 
 
 #debug properties
