add splitting into training, validation and test set

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,19 +1,20 @@
-targetValueColumn=1
-#in percent
+dataSourceName =winequality-white.csv
+csvSeparator =;
 
 batchSize=20
-mlpArchitecture=6
-inputVectors=1,2
-outputVector=3
+mlpArchitecture=15,15
+inputVectors=1,2,3,4,5,6,7,8,9,10,11
+outputVector=12
 
 
 #debug properties
-initializationDebug=true
+loadedDatasetDebug=true
+initializationDebug=false
 learningIterationsDebug=true
 neuronInputsDebug=false
-outputsOfLearningDebug=true
-learningOutputsDebug=true
-weightsDebug=true
-neuronsOutputDebug=true
+outputsOfLearningDebug=false
+learningOutputsDebug=false
+weightsDebug=false
+neuronsOutputDebug=false
 
 
