add early stopping criteria

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -10,11 +10,10 @@ outputVector=12
 #debug properties
 loadedDatasetDebug=true
 initializationDebug=false
-learningIterationsDebug=true
+learningError=true
+validationError=true
 neuronInputsDebug=false
 outputsOfLearningDebug=false
-learningOutputsDebug=false
-weightsDebug=false
-neuronsOutputDebug=false
+
 
 
