--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -2,8 +2,9 @@ dataSourceName =winequality-white.csv
 csvSeparator =;
 
 batchSize=20
-mlpArchitecture=15,15
-inputVectors=1,2,3,4,5,6,7,8,9,10,11
+mlpArchitecture=10
+learningRate=0.1
+inputVectors=1,2,3,4
 outputVector=12
 
 
