--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -2,14 +2,14 @@ dataSourceName =winequality-white.csv
 csvSeparator =;
 
 batchSize=20
-mlpArchitecture=10
+mlpArchitecture=10,10
 learningRate=0.1
-inputVectors=1,2,3,4
+inputVectors=1,2,3,4,5,6,7,8,9,10,11
 outputVector=12
 
 
 #debug properties
-loadedDatasetDebug=true
+loadedDatasetDebug=false
 initializationDebug=false
 learningError=true
 validationError=true
