add training, validation and test set split

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,19 +1,20 @@
-targetValueColumn=1
-#in percent
+dataSourceName =xor_dataset.csv
+csvSeparator =,
 
 batchSize=20
-mlpArchitecture=4,2
-inputSize=2
-outputSize=1
+mlpArchitecture=10
+learningRate=0.1
+inputVectors=1,2
+outputVectors=3
+weightsInitializationInterval=
 
 
 #debug properties
+loadedDatasetDebug=false
 initializationDebug=false
-learningIterationsDebug=false
+learningError=true
+validationError=false
 neuronInputsDebug=false
 outputsOfLearningDebug=false
-learningOutputsDebug=false
-weightsDebug=false
-neuronsOutputDebug=false
 
 
