add buildings set

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,19 +1,19 @@
-dataSourceName =xor_dataset.csv
-csvSeparator =,
+dataSourceName =buildings.csv
+csvSeparator =;
 
-batchSize=20
-mlpArchitecture=10
-learningRate=0.1
-inputVectors=1,2
-outputVectors=3
+batchSize=10
+mlpArchitecture=10,5
+learningRate=0.05
+inputVectors=1,2,3,4,5,6,7,8
+outputVectors=9
 weightsInitializationInterval=
 
 
 #debug properties
 loadedDatasetDebug=false
 initializationDebug=false
-learningError=true
-validationError=false
+learningError=false
+validationError=true
 neuronInputsDebug=false
 outputsOfLearningDebug=false
 
