--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,19 +1,22 @@
-dataSourceName =buildings.csv
+dataSourceName =winequality-white.csv
 csvSeparator =;
 
 batchSize=10
-mlpArchitecture=10,5
-learningRate=0.05
-inputVectors=1,2,3,4,5,6,7,8
-outputVectors=9
-weightsInitializationInterval=
+mlpArchitecture=8
+learningRate=0.1
+inputVectors=1,2,3,4,5,6
+outputVectors=12
+weightsInitializationInterval=-0.1,0.1
+errorLimit=0
+iterationsLimit=1000
+
 
 
 #debug properties
 loadedDatasetDebug=false
 initializationDebug=false
 learningError=false
-validationError=true
+validationError=false
 neuronInputsDebug=false
 outputsOfLearningDebug=false
 
