add combination of stopping criteria

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,22 +1,23 @@
 dataSourceName =winequality-white.csv
 csvSeparator =;
 
-batchSize=10
-mlpArchitecture=8
-learningRate=0.1
+batchSize=20
+mlpArchitecture=10,10
+learningRate=0.01
 inputVectors=1,2,3,4,5,6
 outputVectors=12
 weightsInitializationInterval=-0.1,0.1
+
+#determines early stopping rule - how many learning iteration can be made without decrease of an error
+errorNotDecreasedLimit=50
 errorLimit=0
-iterationsLimit=1000
-
-
+iterationsLimit=100000
 
 #debug properties
 loadedDatasetDebug=false
 initializationDebug=false
 learningError=false
-validationError=false
+validationError=true
 neuronInputsDebug=false
 outputsOfLearningDebug=false
 
